--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>MVP - Guess with friends</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet"> 
-	<script src="app.js" defer></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js" defer></script>
 	<script src="/socket.io/socket.io.js" defer></script>
+	<script type="text/javascript" src="app.js" defer></script>
+	
 </head>
 <body data-page="login">
 	<header>
 		
 	</header>
+	<section class="loading--screen hidden">
+		<div class="loading-wrapper">
+		  <div class="loading-content"></div>
+		</div>
+	</section>
 	<section class="section--background">
 		<div class="fond fond--cross"></div>
 		<div class="fond fond--circle"></div>
@@ -117,7 +123,7 @@
 	<section id="#login" class="login">
 		<h1 class="title">Guess with <span class="coloryellow">friends</span></h1>
 		<form class="input--changepage" input-datapage="menu">
-			<input class="inputstyle inputusername" type="text" name="username" value="USERNAME"></input>
+			<input class="inputstyle inputusername" type="text" name="username" placeholder="username" value=""></input>
 		</form>
 	</section>
 	<section id="#menu" class="menu">
@@ -142,12 +148,12 @@
 			</ul> 
 			<div class="custom--parametre">
 				<ul class="list list--config">
-					<li><p>Dépixelisation</p><div><button class="moins moins--depixel"><</button><p class="value--config value--depixel">2</p><button class="plus plus--depixel">></button></div></li>
-					<li><p>Dézoom</p><div><button class="moins moins--dezoom"><</button><p class="value--config value--dezoom">2</p><button class="plus plus--dezoom">></button></div></li>
-					<li><p>Défloutage</p><div><button class="moins moins--deflou"><</button><p class="value--config value--deflou">2</p><button class="plus plus--deflou">></button></div></li>
-					<li><p>Synopsis</p><div><button class="moins moins--synopsis"><</button><p class="value--config value--synopsis">2</p><button class="plus plus--synopsis">></button></div></li>
-					<li><p>Puzzle</p><div><button class="moins moins--puzzle"><</button><p class="value--config value--puzzle">2</p><button class="plus plus--puzzle">></button></div></li>
-					<li><p>Temps/questions</p><div><button class="moins moins--timequest"><</button><p class="value--config value--timequest">30<span class="miniature">s</span></p><button class="plus plus--timequest">></button></div></li>
+					<li class="incoming"><p>Dépixelisation</p><div><button class="moins moins--depixel">&lt;</button><p class="value--config value--depixel">2</p><button class="plus plus--depixel">></button></div></li>
+					<li><p>Dézoom</p><div><button class="moins moins--dezoom">&lt;</button><p class="value--config value--dezoom">2</p><button class="plus plus--dezoom">></button></div></li>
+					<li><p>Défloutage</p><div><button class="moins moins--deflou">&lt;</button><p class="value--config value--deflou">2</p><button class="plus plus--deflou">></button></div></li>
+					<li><p>Synopsis</p><div><button class="moins moins--synopsis">&lt;</button><p class="value--config value--synopsis">2</p><button class="plus plus--synopsis">></button></div></li>
+					<li><p>Puzzle</p><div><button class="moins moins--puzzle">&lt;</button><p class="value--config value--puzzle">2</p><button class="plus plus--puzzle">></button></div></li>
+					<li><p>Temps/questions</p><div><button class="moins moins--timequest">&lt;</button><p class="value--config value--timequest">30<span class="miniature">s</span></p><button class="plus plus--timequest">></button></div></li>
 					<li><p>Joueurs max</p><div><button class="moins moins--playermax"><</button><p class="value--config value--playermax">5</p><button class="plus plus--playermax">></button></div></li>
 				</ul>
 			</div>
@@ -157,11 +163,13 @@
 	<section id="#joinroom" class="joinroom">
 		<button class="btnretour btn--changepage" button-datapage="menu"><  RETOUR</button>
 		<h2 class="title">Rejoindre <span class="coloryellow">une partie</span></h2>
-			<form class="input--changepage" input-datapage="hub">
+			<form class="input--changepage inputjoinroom" input-datapage="hub">
 				<label>Seed de la room</label>
-				<input class="inputstyle inputjoinroom" type="text" name="seedroom" value=""></input>
+				<input class="inputstyle" type="text" name="seedroom" value=""></input>
 			</form>
 	</section>
+
+
 
 	<section id="#hub" class="hub">
 		<button class="btnretour btn--changepage" button-datapage="menu"><  QUITTER</button>
@@ -181,21 +189,75 @@
 			<button class="btn btn--changepage btn--start" button-datapage="game">Commencer</button>
 	</section>
 
+
+
+
 	<section id="#game" class="game"> 
-		<h2 class="title--reponse hidden"></h2>
+		<div class="logo--game"></div>
+		<span class="compteur--game"></span>
+		<h2 class="title title--small title--reponse"></h2>
+		
 		<div class="gamearea hidden">
-			<div class="gamearea--flou"></div>
+		<div class="gamearea--depixel">
+			<svg viewbox="0 0 864 576">
+		    <filter id="pixelate" x="0" y="0">
+		    <feFlood id="dot" x="0" y="0" height="1" width="1" />
+		    <feComposite id="spacing" width="20" height="20"/>
+		    <feTile result="a"/>
+		    <feComposite in="SourceGraphic" in2="a" 
+		                 operator="in"/>
+		    <feMorphology id="size" operator="dilate"
+		                  radius="10"/>
+		  </filter>
+		  <image class="imgpixelise" width="100%" height="100%" preserveAspectRatio="none" x="0" y="0" href="assets/imagesgames/hades.jpg" /></svg>
+		</div>	
+			<p class="synopsisgame hidden"></p>
+			<div class="gamearea--flou hidden"></div>
+			<div class="gamearea--puzzle hidden">
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+				<div class="bloc"></div>
+			</div>
 		</div>
-		<button class="buzzer hidden"></button>
+		<div class="chrono">
+				<span class="seconds"></span> secondes restantes&nbsp;!
+			</div>
 		<form class="input">
-			<input class="input--reponse hidden" type="text" id="reponse" value="">
+			<input class="inputstyle input--reponse" type="text" id="reponse" value="" placeholder="Entre ta réponse">
 		</form>
-		<button class="btn btn--suivant hidden">Suivant</button>
-		<button class="btn--changepage" button-datapage="classement">Terminer</button>
+		<button class="btn btn--validate">Valider</button>
+		<button class="btn btn--suivant hidden" data--btnpage="classement">Suivant</button>
+		<p class="scoring">Score&nbsp;: <span class="coloryellow">0</span></p>
 	</section>
 	<section id="#classement" class="classement">
-		
-
+		<h2 class="title">Guess with<span class="coloryellow"> friends</span></h2>
+		<div class="classement--score">
+			<p class="newscore">Score:</p>
+			<p class="bestscore">Bestscore:</p>
+			<button class="btn btn--endgame" data--btnpage="crearoom">Recommencer</button>
+		</div>
 	</section>
 </body>
 </html>
